--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
   compileSdk 34
 
   defaultConfig {
-    applicationId "io.github.jd1378.otphelper"
+    applicationId "io.github.jd1378.otphelper.cloud"
     minSdk 24
     targetSdk 34
     versionCode 28
@@ -98,6 +98,11 @@ dependencies {
   def appcompat_version = '1.7.0-beta01'
   implementation "androidx.appcompat:appcompat:$appcompat_version"
   implementation "androidx.appcompat:appcompat-resources:$appcompat_version"
+
+  // network
+  implementation "com.squareup.retrofit2:retrofit:2.10.0"
+  implementation "com.squareup.retrofit2:converter-gson:2.10.0"
+  implementation("com.squareup.okhttp3:logging-interceptor:4.12.0")
 }
 
 hilt { enableAggregatingTask = true }
