--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,10 +5,12 @@
   <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
   <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
-  <uses-permission android:name="io.github.jd1378.otphelper.permission.RECEIVE_CODE" />
+  <uses-permission android:name="android.permission.INTERNET"/>
+
+  <uses-permission android:name="${applicationId}.permission.RECEIVE_CODE" />
 
   <permission
-      android:name="io.github.jd1378.otphelper.permission.RECEIVE_CODE"
+      android:name="${applicationId}.permission.RECEIVE_CODE"
       android:protectionLevel="signature" />
 
   <application
@@ -55,17 +57,17 @@
         android:name=".CodeDetectedReceiver"
         android:exported="true">
       <intent-filter>
-        <action android:name="io.github.jd1378.otphelper.code_detected" />
+        <action android:name="${applicationId}.code_detected" />
       </intent-filter>
     </receiver>
     <receiver
         android:name=".NotifActionReceiver"
         android:exported="true">
       <intent-filter>
-        <action android:name="io.github.jd1378.otphelper.actions.code_copy" />
-        <action android:name="io.github.jd1378.otphelper.actions.ignore_notif_app" />
-        <action android:name="io.github.jd1378.otphelper.actions.ignore_notif_tag" />
-        <action android:name="io.github.jd1378.otphelper.actions.ignore_notif_nid" />
+        <action android:name="${applicationId}.actions.code_copy" />
+        <action android:name="${applicationId}.actions.ignore_notif_app" />
+        <action android:name="${applicationId}.actions.ignore_notif_tag" />
+        <action android:name="${applicationId}.actions.ignore_notif_nid" />
       </intent-filter>
     </receiver>
     <receiver
