--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,10 +4,10 @@
 
   <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
   <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-
-  <uses-permission android:name="android.permission.INTERNET"/>
-
+  <uses-permission android:name="android.permission.INTERNET" />
   <uses-permission android:name="${applicationId}.permission.RECEIVE_CODE" />
+  <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+  <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
 
   <permission
       android:name="${applicationId}.permission.RECEIVE_CODE"
@@ -25,9 +25,9 @@
       tools:targetApi="31">
     <activity
         android:name=".MainActivity"
+        android:excludeFromRecents="true"
         android:exported="true"
-        android:theme="@style/Theme.OtpHelper"
-        android:excludeFromRecents="true">
+        android:theme="@style/Theme.OtpHelper">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
 
@@ -43,7 +43,6 @@
         <action android:name="android.service.notification.NotificationListenerService" />
       </intent-filter>
     </service>
-
     <service
         android:name="androidx.appcompat.app.AppLocalesMetadataHolderService"
         android:enabled="false"
@@ -52,6 +51,12 @@
           android:name="autoStoreLocales"
           android:value="true" />
     </service>
+
+    <service
+        android:name=".background.ClipboardWatcherService"
+        android:enabled="true"
+        android:exported="false"
+        android:foregroundServiceType="dataSync" />
 
     <receiver
         android:name=".CodeDetectedReceiver"
@@ -76,6 +81,7 @@
         <action android:name="android.intent.action.BOOT_COMPLETED" />
       </intent-filter>
     </receiver>
+    <receiver android:name="io.github.jd1378.otphelper.background.ClipboardManagerReceiver" />
   </application>
 
 </manifest>
